--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,30 @@
   <artifactId>transformer</artifactId>
   <version>1.0</version>
  
+ <build>
+     <plugins>
+         <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>                       
+                                <argument>-classpath</argument>
+                                <classpath></classpath>
+                                <argument>com.ganesh.transformer.Main</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+     </plugins>
+ </build>
+ 
 </project>
